# shaman

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  postgres.yml  sqlite.yml
alembic/: env.py
alembic/versions/: 4ace333da7ba_adds_a_arch_model.py  8ddc720fb6d2_adds_a_repo_extra_field.py  c7edd97df280_add_flavor_to_repo_model.py  cc3cddf3efb0_create_the_build_model.py  ccb19795cbdc_adds_distro_distro_version_and_distro_.py
config/: dev.py  run.py
deploy/playbooks/: .gitignore  README.rst  ansible.cfg  deploy_master.yml  deploy_postgres.yml  deploy_vagrant.yml  hosts.sample
deploy/playbooks/examples/: deploy_postgres.yml  deploy_production.yml  deploy_vagrant.yml  hosts
public/css/: sb-admin-2.css
public/css/font-awesome/: font-awesome.min.css
shaman/: app.py  auth.py  checks.py  util.py
shaman/commands/: populate.py
shaman/controllers/: health.py  root.py  search.py
shaman/controllers/api/: __init__.py
shaman/controllers/builds/: __init__.py  projects.py
shaman/controllers/nodes/: __init__.py
shaman/controllers/repos/: __init__.py  distros.py  flavors.py  projects.py  refs.py
shaman/models/: __init__.py  archs.py  builds.py  nodes.py  projects.py  repos.py  types.py
shaman/templates/: build.html  builds.html  helpers.py  index.html  layout.html
shaman/tests/: config.py  conftest.py  test_util.py  util.py
shaman/tests/controllers/: test_builds.py  test_bus.py  test_health.py  test_nodes.py  test_repos.py  test_root.py  test_search.py
shaman/tests/models/: test_builds.py  (+1 more)
(+38 files in other folders)
